--- a/index.html
+++ b/index.html
@@ -991,7 +991,7 @@
           <section class="contact-form">
             <h3 class="h3 form-title">Contact Form</h3>
 
-            <form action="#" class="form" data-form>
+            <form action="rohankumarpatel8421@gmail.com" class="form" data-form>
               <div class="input-wrapper">
                 <input
                   type="text"
